--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "@nuxt/ui": "^2.16.0",
+    "@supabase/supabase-js": "^2.43.4",
     "nuxt": "^3.11.2",
+    "supabase": "^1.172.2",
+    "uuid": "^9.0.1",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   }
