--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/ui": "^2.16.0",
     "@supabase/supabase-js": "^2.43.4",
     "nuxt": "^3.11.2",
+    "nuxt-shiki": "^0.3.0",
     "supabase": "^1.172.2",
     "uuid": "^9.0.1",
     "vue": "^3.4.27",
