--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-app",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "private": true,
   "type": "module",
   "scripts": {
@@ -11,6 +11,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@iconify-json/heroicons": "^1.1.21",
+    "@iconify-json/mdi": "^1.1.66",
     "@nuxt/ui": "^2.16.0",
     "@supabase/supabase-js": "^2.43.4",
     "nuxt": "^3.11.2",
