--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@iconify-json/mdi": "^1.1.66",
     "@nuxt/ui": "^2.16.0",
     "@supabase/supabase-js": "^2.43.4",
+    "@vueuse/nuxt": "^10.10.0",
     "joi": "^17.13.1",
     "nuxt": "^3.11.2",
     "nuxt-shiki": "^0.3.0",
